--- a/index.html
+++ b/index.html
@@ -47,12 +47,9 @@
                   <div class="form-group">
                     <label for="pwd">Role</label>
                     <select id="role" class="custom-select" aria-labelledby="dropdownMenuButton">
-                      <option selected value="1">1</option>
-                      <!-- Setting the option for 5 as default -->
-                      <option value="5" selected>5</option>
-                      <option value="10">10</option>
-                    </select>
-                  </div>
+                            <label for="start-year">Start Dat (MM/DD/YYYY)</label>
+                            <input type="text" class="form-control" id="start-year">
+                          </div>
     
                   <!-- Here we capture the Start Year Parameter-->
                   <div class="form-group">
