--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
 <div class="container">
 
         <!-- Jumbotron for Title -->
-        <div class="jumbotron" style="background-color: black ; color: white;">
+        <div class="card" style="background-color: black ; color: white;">
           <h1 class="text-center">
             <strong>
               <i class="fa fa-newspaper-o"></i>Employee Data Management</strong>
           </h1>
         </div>
-    
+
+
+        <div class="jumbotron" >
+        <h1 class="text-center"></h1>
         <!-- Row for Searching New York Times -->
         <div class="row">
           <div class="col-sm-12">
@@ -47,9 +50,9 @@
                   <div class="form-group">
                     <label for="pwd">Role</label>
                     <select id="role" class="custom-select" aria-labelledby="dropdownMenuButton">
-                            <label for="start-year">Start Dat (MM/DD/YYYY)</label>
-                            <input type="text" class="form-control" id="start-year">
-                          </div>
+                      <label for="start-year">Start Dat (MM/DD/YYYY)</label>
+                    <input type="text" class="form-control" id="start-year">
+                  </div>
     
                   <!-- Here we capture the Start Year Parameter-->
                   <div class="form-group">
@@ -74,4 +77,5 @@
             </div>
           </div>
         </div>
+    </div>
     </body>
