--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
+   <link rel="stylesheet" href="/css/style.css">
    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
    crossorigin="anonymous"></script>
@@ -22,9 +23,8 @@
           </h1>
         </div>
 
-
-        <div class="jumbotron" >
         <h1 class="text-center"></h1>
+        <div class="jumbotron" >
         <!-- Row for Searching New York Times -->
         <div class="row">
           <div class="col-sm-12">
@@ -33,7 +33,7 @@
             <div class="card">
               <div class="card-header">
                 <strong>
-                  <i class="fa fa-list-alt"></i> Add Employee</strong>
+                  <i id="addEmpl" class="fa fa-list-alt"></i> Add Employee</strong>
               </div>
               <div class="card-body">
     
