--- a/index.html
+++ b/index.html
@@ -8,59 +8,95 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
-   <link rel="stylesheet" href="/css/style.css">
+   <link rel="stylesheet" href="css/style.css" >
    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
    crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="container">
-
-        <!-- Jumbotron for Title -->
-        <div class="card" style="background-color: black ; color: white;">
-            <h1 class="text-center">
-                <strong>
-                    <i class="fa fa-newspaper-o"></i>Employee Data Management</strong>
-            </h1>
-        </div>
-
-        <table class="table" id="table">
-            <thead>
-                <tr>
-                    <h1>This is the table</h1>
-                    <th scope="col">row</th>
-                    <th scope="col">row</th>
-                    <th scope="col">row</th>
-                    <th scope="col">row</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
-
-                <div class="jumbotron">
-                    <h1 class="text-center"></h1>
-                    <!-- Row for Searching New York Times -->
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <br>
-                            <!-- First card is for handling the search parameters -->
-                            <div class="card">
-                                <div class="card-header">
+  <div class="container">
+<!-- Jumbotron for Title -->
+  <div class="card" style="background-color: black ; color: white;">
+    <h1 class="text-center">
+     <nav id="emplDMgmt"><strong><i class="fa fa-newspaper-o"></i>Employee Data Management</strong></nav> 
+    </h1>
+  </div>
+  <!--table for database information display-->
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+  
+  <table class="table">
+    <thead class="thead-light">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+  
+  
+<!--Enduser data form-->
+<div class="jumbotron">
+    <h1 class="text-center"></h1>
+<!-- Row for Searching New York Times -->
+<div class="row">
+<div class="col-sm-12"><br>
+<!-- First card is for handling the search parameters -->
+<!--<div class="card"> <div class="card-header"> </div>-->
+                                
                                     <strong>
-                                        <i class="fa fa-list-alt"></i> Add Employee</strong>
+                                   <nav id="addEmpl"><i class="fa fa-list-alt"></i> Add Employee</strong></nav>     
                                 </div>
                                 <div class="card-body">
 
@@ -78,7 +114,7 @@
                                             <label for="pwd">Role</label>
                                             <select id="role" class="custom-select"
                                                 aria-labelledby="dropdownMenuButton">
-                                                <label for="start-year">Start Dat (MM/DD/YYYY)</label>
+                                                <label for="start-year">Start Date (MM/DD/YYYY)</label>
                                                 <input type="text" class="form-control" id="start-year">
                                         </div>
 
