--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
   <table class="table">
     <thead class="thead-dark">
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Employee Name</th>
+        <th scope="col">Role</th>
+        <th scope="col">Start Date</th>
+        <th scope="col">Months Worked</th>
+        <th scope="col">Monthyly Rate ($)</th>
+        <th scope="col">Total Billed($)</th>
+        
       </tr>
     </thead>
     <tbody>
