--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
-   <link rel="stylesheet" href="/css/style.css" >
+   <link rel="stylesheet" type="text/css" href="css/style.css" >
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -18,12 +18,11 @@
    <div class="container">
 
       <!-- Jumbotron for Title -->
-     <div class="card"></div>
-      <nav id="emplDataH">
+     <nav id="emplDataH">
         <h1 class="text-center">
             <strong> <i class="fa fa-newspaper-o"></i>Employee Data Management<br>A Comprehensive Directory of Employee Billable Hours </br></strong>
          </h1>
-      </div></nav> 
+      </div></nav>
 
       <table class="table">
         <thead class="thead-dark">
@@ -96,8 +95,9 @@
                <!-- First card is for handling the search parameters -->
                <div class="card">
                   <div class="card-header">
-                     <strong>
-                        <i class="fa fa-list-alt"></i> Add Employee</strong>
+                      <div id="addEmpl">
+                          <strong> <i class="fa fa-list-alt"></i> Add Employee</strong>
+                      </div>   
                   </div>
                   <div class="card-body">
 
