--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
    <link rel="stylesheet" type="text/css" href="css/style.css" >
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
@@ -54,8 +54,8 @@
           </tr>
         </tbody>
       </table>
-      
-      <table class="table">
+  <div id="table" ></div>   
+      <!-- <table class="table">
         <thead class="thead-light">
           <tr>
             <th scope="col">#</th>
@@ -66,13 +66,13 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">1</th>
+            <th scope="row" id="2row">1</th>
             <td>Mark</td>
             <td>Otto</td>
             <td>@mdo</td>
           </tr>
           <tr>
-            <th scope="row">2</th>
+            <th scope="row" id=2row>2</th>
             <td>Jacob</td>
             <td>Thornton</td>
             <td>@fat</td>
@@ -84,7 +84,7 @@
             <td>@twitter</td>
           </tr>
         </tbody>
-      </table>
+      </table> -->
 
       <div class="jumbotron">
          <h1 class="text-center"></h1>
